@@ -25,7 +25,9 @@ Dist::Zilla::Plugin::MinimumPerl = 0
 directory = corpus
 directory = share
 
-[Author::Plicease::UploadToMatrix]
+[Author::Plicease::Upload]
+cpan = 0
+
 [AutoMetaResources]
 bugtracker.github = user:plicease
 repository.github = user:plicease
