@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - [@ACPS] mb_ prefixed values are passed into [ModuleBuild], if present
 
 0.27      2013-07-06 18:07:02 America/New_York
   - commit README.pod after release if it is there
